kubernetes/main/apps/downloads/autoscan/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: autoscan
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: autoscan
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # radarr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - port: &port 7878
          protocol: TCP
    # sonarr
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - port: *port
          protocol: TCP
  egress:
    # plex
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
          podSelector:
            matchLabels:
              app.kubernetes.io/name: plex
      ports:
        - port: 32400
          protocol: UDP
    # kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # Internet
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
